# SavSyncer

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  README.md
About/: About.cpp  About.h  About.ui
Images/: Images.qrc
Interfaces/: IServices.h
Profile/: Profile.cpp  Profile.h  Profile.ui
Profile/Services/YandexService/: CMakeLists.txt  YandexIcons.qrc  YandexService.cpp  YandexService.h
SavSyncer/: CMakeLists.txt  Game.cpp  Game.h  SavSyncer.cpp  SavSyncer.h  SavSyncer.ui  defines.h  logoExe.rc  main.cpp
SavSyncer/ItemGameList/: ItemGameList.cpp  ItemGameList.h  ItemGameList.ui
SavSyncer/PageGameList/: PageGameList.cpp  PageGameList.h  PageGameList.ui
SavSyncerTools/: CMakeLists.txt  CMakeUserPresets.json
SavSyncerTools/SavSyncerTools/: CMakeLists.txt  main.cpp
Settings/: Settings.cpp  Settings.h  Settings.ui
